--- a/src/component/header.css
+++ b/src/component/header.css
@@ -116,7 +116,7 @@
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
-    font-size: 40px;
+    /* font-size: 40px; */
     color: white;
 
 }
@@ -134,32 +134,37 @@
     flex-direction: column;
 
 }
-.location-text{
+
+.location-text {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding-top: 50px;
 }
-.location-text span:first-child{
+
+.location-text span:first-child {
     font-size: 100px;
 
 }
-.location-text span:last-child{
+
+.location-text span:last-child {
     font-size: 60px;
 }
-.mobile{
+
+.mobile {
     display: flex;
     align-items: center;
     /* justify-content: center; */
 }
-.media{
+
+.media {
     display: flex;
     flex-direction: column;
 }
-.social{
-    
-}
-.social span{
+
+.social {}
+
+.social span {
     display: block;
     text-align: center;
 }
@@ -167,7 +172,7 @@
 .form-input {
     display: flex;
     flex-direction: column;
-   
+
     /* border-top-left-radius: 20px; */
     /* border-bottom-right-radius: 20px; */
     /* justify-content: flex-start; */
@@ -175,13 +180,14 @@
     height: auto;
     padding: 10px 20px;
     margin-left: 10px;
-  
+
 
 
 }
-.form-input button{
+
+.form-input button {
     margin-top: 20px;
-    width: 120px;
+    /* width: 120px; */
     height: 50px;
     font-size: 25px;
     border-radius: 5px;
@@ -189,21 +195,18 @@
     border-color: rgb(0, 40, 64);
     color: #833ab4;
     background-color: transparent;
-   cursor: pointer;
-
-    
-
-
+    cursor: pointer;
 
 }
-.form-input button:hover{
-    
-    background: #833ab4;  
-    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  
-    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); 
+
+.form-input button:hover {
+
+    background: #833ab4;
+    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    
+
 }
 
 .form-input label {
