--- a/src/component/header.css
+++ b/src/component/header.css
@@ -105,9 +105,9 @@
     /* background-color: rgb(0, 40, 64); */
     background: #8e9eab;
 
-    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
+    background: #8e9eab;
 
-    background: linear-gradient(to right, #eef2f3, #8e9eab);
+    background: #8e9eab;
 
 
 }
