--- a/src/component/profile/profileCard.module.scss
+++ b/src/component/profile/profileCard.module.scss
@@ -22,50 +22,34 @@
 
   .subtitle {
     color: #bbb;
-    font-size: 13px;
+    font-size: 14px;
     margin-top: 5px;
   }
 
   .info {
-    text-align: left;
-    margin-top: 20px;
+    color: #bbb;
     border-top: 1px solid #333;
-    padding-top: 10px;
-
-    div {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 5px;
-      font-size: 14px;
-
-      span {
-        color: #aaa;
-      }
-    }
-  }
-
-  .languages {
-    display: flex;
-    justify-content: space-between;
     margin-top: 20px;
-
-    .lang {
-      .circle {
-        width: 50px;
-        height: 50px;
-        border: 4px solid #f9c80e;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        font-weight: bold;
-        font-size: 13px;
-      }
-
-      p {
-        margin-top: 5px;
-        font-size: 12px;
+    padding-top: 10px;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    text-align: justify;
+  }
+  .download {
+    margin-top: 20px;
+    display: flex;
+    color: #bbb;
+     font-size: 15px;
+    justify-content: space-around;
+    .downloadcv {
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+      svg {
+        top: 3px;
+        position: relative;
+        font-size: 15px;
       }
     }
   }
