--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,7 +13,8 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
+  max-height: 100vh;
 }
 
 body {
@@ -37,8 +38,9 @@ a {
 .container {
   width: 100%;
   max-width: 1170px;
-  margin: 0 auto;
+  margin: 30px auto;
 }
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
