--- a/src/component/ExpertArea/expertArea.module.scss
+++ b/src/component/ExpertArea/expertArea.module.scss
@@ -9,16 +9,26 @@
     color: #333;
   }
   .grid {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    display: flex;
+    // grid-template-columns: repeat(2, minmax(100px, 1fr));
+    flex-wrap: wrap;
     gap: 16px;
     .skill {
+      color: #545454;
+      border: 1px solid #d3d3d3;
+      border-radius: 5px;
+      align-items: center;
+      width: max-content;
+      padding: 5px 10px;
       font-size: 15px;
-      color: #434343;
+      display: flex;
+      cursor: pointer;
       .icon {
-        width: 40px;
-        height: 40px;
-        margin-bottom: 6px;
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+        border-radius: 5px;
+        object-fit: contain;
       }
     }
   }
@@ -26,18 +36,8 @@
 
 /* Tablets (min width 601px and max width 1024px) */
 @media (min-width: 768px) and (max-width: 1024px) {
-  .card {
-    .grid {
-      grid-template-columns: repeat(3, minmax(100px, 1fr));
-    }
-  }
 }
 
 /* Desktops (min width 1025px) */
 @media (min-width: 1025px) {
-  .card {
-    .grid {
-      grid-template-columns: repeat(6, minmax(100px, 1fr));
-    }
-  }
 }
