--- a/src/component/Layout/layout.module.scss
+++ b/src/component/Layout/layout.module.scss
@@ -3,13 +3,23 @@
   gap: 30px;
   height: 90vh;
 }
+.menu {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 28px;
+  width: 28px;
+  svg {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+  }
+}
 .Headernav {
   position: relative;
   width: 100%;
-  height: 50px;
-  font-size: 0;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
+  margin-bottom: 20px;
 }
 
 .Headernav a {
@@ -17,16 +27,11 @@
   text-transform: uppercase;
   text-decoration: none;
   position: relative;
-  z-index: 1;
   display: inline-block;
-  text-align: center;
   padding: 0 20px;
   line-height: 50px;
 }
 
-.Headernav a:hover {
-  color: #585858;
-}
 .Headernav a::after {
   content: "";
   display: block;
@@ -34,22 +39,34 @@
   height: 2px;
   background-color: #585858;
   transition: all 0.6s ease 0s;
-  transition: width 0.3;
 }
-.Headernav a:hover::after {
-  width: 100%;
-  transition: width 0.34s;
-}
+
 .pageContainer {
   overflow-y: auto;
   height: 80vh;
   scrollbar-width: none;
 }
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {
+  .Headernav a:hover {
+    color: #585858;
+  }
+
+  .Headernav a:hover::after {
+    width: 100%;
+    transition: width 0.34s;
+  }
+}
+
 @media (max-width: 767px) {
 }
 
 /* Tablets (min width 601px and max width 1024px) */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .menu {
+    display: none;
+  }
   .subContainer {
     grid-template-columns: 1.2fr 3fr;
   }
