--- a/src/component/ExpertArea/expertArea.module.scss
+++ b/src/component/ExpertArea/expertArea.module.scss
@@ -4,14 +4,17 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 20px 25px;
   margin-bottom: 15px;
+
   .title {
-    font-size: 18px;
-    margin-bottom: 15px;
-    color: #333;
+    font-size: 19px;
+    margin-bottom: 10px;
+    color: #323232c2;
+    
   }
   .skillDescrip {
-    font-size: 15px;
-    color: #333;
+    color: #5c5c5c;
+    font-size: 16px;
+    
   }
 
   .grid {
@@ -19,6 +22,7 @@
     flex-wrap: wrap;
     gap: 16px;
     margin: 15px 0 0;
+    position: relative;
     .skill {
       color: #545454;
       border: 1px solid #d3d3d3;
@@ -29,21 +33,45 @@
       font-size: 15px;
       display: flex;
       cursor: pointer;
-      .icon {
-        width: 20px;
-        height: 20px;
-        margin-right: 5px;
-        border-radius: 5px;
-        object-fit: contain;
+      p {
+        padding-left: 10px;
+        align-items: center;
+        display: flex;
+        .icon {
+          width: 20px;
+          height: 20px;
+          margin-right: 5px;
+          border-radius: 5px;
+          object-fit: contain;
+        }
       }
+    }
+    .skill::before {
+      content: attr(skill-rating);
+      position: relative;
+      top: -6px;
+      width: max-content;
+      height: 100%;
+      padding: 3px;
+      color: #121212;
+      text-align: center;
+      font-weight: 700;
+      background: #c7c7c7;
+      clip-path: polygon(100% 0%, 100% 100%, 50% 70%, 0 100%, 0 0);
     }
   }
 }
 
 /* Tablets (min width 601px and max width 1024px) */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .card {
+    border-left: 5px solid #89ac46;
+  }
 }
 
 /* Desktops (min width 1025px) */
 @media (min-width: 1025px) {
+  .card {
+    border-left: 5px solid #89ac46;
+  }
 }
