--- a/src/component/Layout/layout.module.scss
+++ b/src/component/Layout/layout.module.scss
@@ -16,10 +16,12 @@
   }
 }
 .Headernav {
-  position: relative;
   width: 100%;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
+  padding: 0 20px;
+  display: none;
+  background: #fff;
 }
 
 .Headernav a {
@@ -42,8 +44,15 @@
 }
 
 .pageContainer {
-  height: 80vh;
+  height: 95vh;
   scrollbar-width: none;
+  padding: 0 10px;
+}
+.closeIcon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 1;
 }
 
 /* Enable hover only on non-touch devices */
@@ -69,11 +78,24 @@
   .subContainer {
     grid-template-columns: 1.2fr 3fr;
   }
+  .pageContainer {
+    overflow-y: auto;
+  }
 }
 
 /* Desktops (min width 1025px) */
 @media (min-width: 1025px) {
   .subContainer {
     grid-template-columns: 1.2fr 3fr;
+  }
+  .Headernav {
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    display: block;
+  }
+
+  .pageContainer {
+    overflow-y: auto;
   }
 }
