--- a/src/component/ExpertArea/expertArea.module.scss
+++ b/src/component/ExpertArea/expertArea.module.scss
@@ -1,7 +1,7 @@
 .card {
   background: white;
   border-radius: 12px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
   padding: 20px 25px;
   margin-bottom: 15px;
 
@@ -9,12 +9,10 @@
     font-size: 19px;
     margin-bottom: 10px;
     color: #323232c2;
-    
   }
   .skillDescrip {
     color: #5c5c5c;
     font-size: 16px;
-    
   }
 
   .grid {
